// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code should hidden line number and copy button according code block metadata (snapshot) 1`] = `
<div>
  <pre
    class="prism-code language-type block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render block code correctly (snapshot) 1`] = `
<div>
  <pre
    class="prism-code language-type block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
        style="display: inline-block;"
      >
        

      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 1`] = `
<div>
  <pre
    class="prism-code language-html block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 2`] = `
<div>
  <pre
    class="prism-code language-xml block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 3`] = `
<div>
  <pre
    class="prism-code language-yml block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 4`] = `
<div>
  <pre
    class="prism-code language-yaml block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 5`] = `
<div>
  <pre
    class="prism-code language-css block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = 
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 6`] = `
<div>
  <pre
    class="prism-code language-json block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 7`] = `
<div>
  <pre
    class="prism-code language-md block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 8`] = `
<div>
  <pre
    class="prism-code language-markdown block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 9`] = `
<div>
  <pre
    class="prism-code language-js block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 10`] = `
<div>
  <pre
    class="prism-code language-javascript block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 11`] = `
<div>
  <pre
    class="prism-code language-ts block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 12`] = `
<div>
  <pre
    class="prism-code language-typescript block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 13`] = `
<div>
  <pre
    class="prism-code language-coffee block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 14`] = `
<div>
  <pre
    class="prism-code language-coffeescript block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 15`] = `
<div>
  <pre
    class="prism-code language-jsx block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 16`] = `
<div>
  <pre
    class="prism-code language-tsx block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 17`] = `
<div>
  <pre
    class="prism-code language-objc block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 18`] = `
<div>
  <pre
    class="prism-code language-objectivec block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 19`] = `
<div>
  <pre
    class="prism-code language-vue block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 20`] = `
<div>
  <pre
    class="prism-code language-go block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 21`] = `
<div>
  <pre
    class="prism-code language-java block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 22`] = `
<div>
  <pre
    class="prism-code language-rust block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <button
      aria-label="CopyButton"
      class="button"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render inline code correctly (snapshot) 1`] = `
<div>
  <code
    class="inline"
  >
    Inline Code
  </code>
</div>
`;

exports[`Code should render live code correctly (snapshot) 1`] = `
<div>
  <pre
    class="language-type"
  >
    Live Code
  </pre>
</div>
`;
